# simple-lines

./: CMakeLists.txt  README  lines.c  lines_for_mom.cbp  lines_for_mom.depend  lines_for_mom.kdev4  lines_for_mom.layout  lines_ico.xpm
.kdev4/: lines_for_mom.kdev4
